[tool.poetry]
name = "Slurry"
version = "1.1.1"
description = "An async stream processing microframework"
authors = ["Anders Ellenshøj Andersen <andersa@ellenshoej.dk>"]
license = "MIT"
homepage = "https://github.com/andersea/slurry"
readme = "README.rst"
keywords = ["async", "iteration", "generators", "stream", "processing", "trio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Framework :: Trio",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]


[tool.poetry.dependencies]
python = "^3.7"
trio = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
bump2version = "^1.0.0"
pytest-trio = "^0.7.0"
sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
