[tool.poetry]
name = "Slurry"
version = "1.3.1"
description = "An async stream processing microframework"
authors = ["Anders Ellenshøj Andersen <andersa@ellenshoej.dk>"]
license = "MIT"
homepage = "https://github.com/andersea/slurry"
readme = "README.rst"
keywords = ["async", "iteration", "generators", "stream", "processing", "trio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Framework :: Trio",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = "^3.8"
trio = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.12.2"
bump2version = "^1.0.1"
pytest-trio = "^0.7.0"
sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
